login screen changes.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,17 +2,17 @@
     <div class="header-content">
         <div class="logo">
             <!-- Your logo image or text goes here -->
-            <img src="path/to/your/logo.png" alt="Logo">
+            <img src="../../assets/mbs.png" alt="Logo">
         </div>
         <div class="company-name">
             <p class="main-title">{{infoService.contactInfo.companyName}}</p>
             <p class="sub-title">Connecting Talent with Opportunities</p>
         </div>
         <div class="actions">
-            <a mat-button>About</a>
-            <a mat-button>Current Openings</a>
-            <a mat-button>Join</a>
-            <a mat-button>Sign In</a>
+            <a routerLink="/about">About</a>
+            <a routerLink="/current-openings">Current Openings</a>
+            <a routerLink="/join">Join</a>
+            <a routerLink="/sign-in">Sign In</a>
         </div>
     </div>
 </mat-toolbar>
