--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,9 +1,14 @@
-footer {
-    background-color: #3498db;
-    color: #fff;
-    text-align: center;
-    padding: 1em;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+  footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: #3498db;
+      color: #fff;
+      padding: 10px;
+      transition: transform 0.3s ease;
+      text-align: center;
+  }
+
+  footer.hide {
+      transform: translateY(100%);
   }
